feat(notification): adding metrics endpoint
